<resources>
    <string name="app_name">人情日记</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sender_make_name">姓名：</string>
    <string name="sender_make_time">日期：</string>
    <string name="sender_make_money">金额：</string>
    <string name="button_make_ok">确定</string>
    <string name="button_make_cancel">取消</string>
    <string name="text">点击任意位置添加</string>
    <string name="recevieItem">名称：</string>
    <string name="main_page">主页</string>
    <string name="toolbar1">主页</string>
</resources>