<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Receive_make_Activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/check_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccent">
        <TextView
            android:id="@+id/check_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="编辑"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/iconedit">
        </androidx.appcompat.widget.AppCompatImageView>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/recevieItem_make_textView"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:text="@string/recevieItem"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#AAA1A1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.150"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.150" />

    <EditText
        android:id="@+id/recevieItem_make_editView"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/recevieItem_make_textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/recevieTime_make_textView"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:text="@string/sender_make_time"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#A6A1A1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.150"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recevieItem_make_textView"
        app:layout_constraintVertical_bias="0.072" />

    <EditText
        android:id="@+id/receviewTime_make_editViw"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.00"
        app:layout_constraintStart_toEndOf="@+id/recevieTime_make_textView"
        app:layout_constraintTop_toTopOf="@+id/recevieItem_make_editView"
        app:layout_constraintVertical_bias="0.118" />

    <Button
        android:id="@+id/recevie_button_make_ok"
        android:layout_width="86dp"
        android:layout_height="48dp"
        android:background="#03A9F4"
        android:text="@string/button_make_ok"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.732"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

    <Button
        android:id="@+id/recevie_button_make_cancel"
        android:layout_width="86dp"
        android:layout_height="48dp"
        android:background="#C6C3C3"
        android:text="取消"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />
</androidx.constraintlayout.widget.ConstraintLayout>